--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
     <title>Recetas culinarias extranjeras</title>
   </head>
   <body>
-    <h1>Bistec de res a la mexicana</h1>
+    <h1 class="title">Bistec de res a la mexicana</h1>
     <p>Hoy vamos a preparar todo un clásico de la cocina mexicana, unos bistecs de res a la mexicana. Una receta muy fácil y rápida de hacer con ingredientes que seguro que tienes en tu despensa.</p>
-    <img src="img/img1.jpg" alt="Error al cargar la imagen"></img>
+    <img src="img/img1.jpg" alt="Error al cargar la imagen" class="img"></img>
     <br>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15007910.294888817!2d-111.64025257816783!3d23.314285701531734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84043a3b88685353%3A0xed64b4be6b099811!2sMexico!5e0!3m2!1sen!2sar!4v1663119236784!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <h2>Ingredientes del bistec de res a la mexicana para 2 personas</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15007910.294888817!2d-111.64025257816783!3d23.314285701531734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84043a3b88685353%3A0xed64b4be6b099811!2sMexico!5e0!3m2!1sen!2sar!4v1663119236784!5m2!1sen!2sar" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <h2 class="title">Ingredientes del bistec de res a la mexicana para 2 personas</h2>
     <ul>
       <li>2 bistecs de ternera</li>
       <li>1 diente de ajo</li>
@@ -25,7 +26,7 @@
       <li>Media pastilla de caldo concentrado de pollo</li>
       <li>200 ml de agua</li>
     </ul>
-    <h2>Cómo hacer bistec de res a la mexicana</h2>
+    <h2 class="title">Cómo hacer bistec de res a la mexicana</h2>
     <ol>
       <li>Corta los bistecs en tiras de 2 cm de ancho.</li>
       <li>Pela y corta los vegetales.</li>
