--- a/index.html
+++ b/index.html
@@ -8,34 +8,73 @@
     <title>Recetas culinarias extranjeras</title>
   </head>
   <body>
-    <h1 class="title">Bistec de res a la mexicana</h1>
-    <p>Hoy vamos a preparar todo un clásico de la cocina mexicana, unos bistecs de res a la mexicana. Una receta muy fácil y rápida de hacer con ingredientes que seguro que tienes en tu despensa.</p>
-    <img src="img/img1.jpg" alt="Error al cargar la imagen" class="img"></img>
-    <br>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15007910.294888817!2d-111.64025257816783!3d23.314285701531734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84043a3b88685353%3A0xed64b4be6b099811!2sMexico!5e0!3m2!1sen!2sar!4v1663119236784!5m2!1sen!2sar" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <h2 class="title">Ingredientes del bistec de res a la mexicana para 2 personas</h2>
-    <ul>
-      <li>2 bistecs de ternera</li>
-      <li>1 diente de ajo</li>
-      <li>2 pimientos chile serrano</li>
-      <li>Media cebolla blanca o morada</li>
-      <li>4 tomates de pera</li>
-      <li>2 cucharadas de aceite de oliva virgen extra</li>
-      <li>1 pizca de sal</li>
-      <li>1 pizca de pimienta negra molida</li>
-      <li>Media pastilla de caldo concentrado de pollo</li>
-      <li>200 ml de agua</li>
-    </ul>
-    <h2 class="title">Cómo hacer bistec de res a la mexicana</h2>
-    <ol>
-      <li>Corta los bistecs en tiras de 2 cm de ancho.</li>
-      <li>Pela y corta los vegetales.</li>
-      <li>Saltea las tiras de ternera en una sartén con un poco de aceite de oliva virgen extra durante 2 minutos.</li>
-      <li>Retira la carne de la sartén, añade un poco de aceite y sofríe en ella durante 8 minutos el ajo, la cebolla y el pimiento picado, y salpimenta.</li>
-      <li>Incorpora el tomate troceado y cocina durante 5 minutos. Añade media pastilla de caldo de pollo, agua y cocina 5 minutos más.</li>
-      <li>Agrega la carne salteada, mezcla y finaliza la cocción tras 5 minutos a fuego medio.</li>
-      <li>Emplata en una cazuela de barro y sirve en el momento.</li>
-    </ol>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/eI-rgzr1lC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <header>
+      <img src="img/bandera.png" alt="Error al cargar la imagen" class="flag">
+      <h1 class="title">Recetas mexicanas</h1>
+    </header>
+    <nav>
+      <h2>Mas recetas faciles de hacer:</h2>
+      <hr/>
+      <div>
+        <a href="https://www.paulinacocina.net/recetas-comida-mexicana/20942" target="_blank" class="flex_item">Paulina Cocina</a>
+        <a href="https://www.recetasgratis.net/recetas-mexicanas" target="_blank" class="flex_item">Recetas Gratis</a>
+        <a href="https://www.pequerecetas.com/receta/comida-mexicana-5-recetas/" target="_blank" class="flex_item">Peque Recetas</a>
+        <a href="https://www.comedera.com/platos-comida-mexicana-recetas/" target="_blank" class="flex_item">Comedera</a>
+      </div>
+    </nav>
+    <section class="container">
+      <section class="container_item">
+      <section class="red">
+        <h1 class="title">Bistec de res a la mexicana</h1>
+        <img src="img/img1.jpg" alt="Error al cargar la imagen" class="img"></img>
+        <p>Hoy vamos a preparar todo un clásico de la cocina mexicana, unos bistecs de res a la mexicana. Una receta muy fácil y rápida de hacer con ingredientes que seguro que tienes en tu despensa.</p>
+      </section>
+        <h2 class="title">Ingredientes del bistec de res a la mexicana para 2 personas</h2>
+      <ul>
+        <li>2 bistecs de ternera</li>
+        <li>1 diente de ajo</li>
+        <li>2 pimientos chile serrano</li>
+        <li>Media cebolla blanca o morada</li>
+        <li>4 tomates de pera</li>
+        <li>2 cucharadas de aceite de oliva virgen extra</li>
+        <li>1 pizca de sal</li>
+        <li>1 pizca de pimienta negra molida</li>
+        <li>Media pastilla de caldo concentrado de pollo</li>
+        <li>200 ml de agua</li>
+      </ul>
+        <h2 class="title">Cómo hacer bistec de res a la mexicana</h2>
+      <ol>
+        <li>Corta los bistecs en tiras de 2 cm de ancho.</li>
+        <li>Pela y corta los vegetales.</li>
+        <li>Saltea las tiras de ternera en una sartén con un poco de aceite de oliva virgen extra durante 2 minutos.</li>
+        <li>Retira la carne de la sartén, añade un poco de aceite y sofríe en ella durante 8 minutos el ajo, la cebolla y el pimiento picado, y salpimenta.</li>
+        <li>Incorpora el tomate troceado y cocina durante 5 minutos. Añade media pastilla de caldo de pollo, agua y cocina 5 minutos más.</li>
+        <li>Agrega la carne salteada, mezcla y finaliza la cocción tras 5 minutos a fuego medio.</li>
+        <li>Emplata en una cazuela de barro y sirve en el momento.</li>
+      </ol>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/eI-rgzr1lC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </section>
+      <aside>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15007910.294888817!2d-111.64025257816783!3d23.314285701531734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84043a3b88685353%3A0xed64b4be6b099811!2sMexico!5e0!3m2!1sen!2sar!4v1663119236784!5m2!1sen!2sar" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div>
+          <a href="https://wa.me/5491123951736" target="_blank" class="iconoF">
+            <img src="img/wha.png" alt="Error al cargar la imagen" class="icon"></img>
+          </a>
+        </div>
+      </aside>
+    </section>
+    <footer>
+      <a href="https://es-la.facebook.com/" target="_blank">
+        <img src="img/face.png" alt="Error al cargar la imagen" class="icon"></img>
+      </a>
+      <a href="https://es-la.facebook.com/" target="_blank">
+        <img src="img/inst.png" alt="Error al cargar la imagen" class="icon"></img>
+      </a>
+      <a href="https://twitter.com/?lang=es" target="_blank">
+        <img src="img/tw.png" alt="Error al cargar la imagen" class="icon"></img></a>
+      <a href="https://www.youtube.com/" target="_blank">
+        <img src="img/ytb.png" alt="Error al cargar la imagen" class="icon"></img>
+      </a>
+    </footer>
   </body>
 </html>
