--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Recetas de cocina">
+    <meta name="keywords" content="Cocina, Mexico, Tacos,">
+    <meta name="author" content="Jermías Vea Murguía">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css">
     <title>Recetas culinarias extranjeras</title>
@@ -36,6 +39,9 @@
         <a href="https://www.comedera.com/platos-comida-mexicana-recetas/" target="_blank" class="flex_item">Comedera</a>
       </div>
     </nav>
+    <div class="phone">
+      <h1>Esta en un celular</h1>
+    </div>
     <section class="sectionFlex">
       <section class="sectionSection">
         <h2 class="subTitle">Bistec de res a la mexicana</h2>
