--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Cocina, Mexico, Tacos,">
     <meta name="author" content="Jermías Vea Murguía">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Recetas culinarias extranjeras</title>
   </head>
@@ -78,6 +79,42 @@
         </div>
       </aside>
     </section>
+    <div class="container">
+      <div class="row">
+        <div class="card col-sm-12 col-md-6 col-lg-3" style="width: 18rem;">
+          <img src="img/card1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Enchiladas</h5>
+            <p class="card-text">Las tortillas dobladas y rellenas, bañadas de alguna salsa, podrían reemplazar el centro de la bandera de México. Las más populares son las suizas (que no tienen nada de europeas), las rojas, las verdes (y mejor si son gratinadas).</p>
+            <a href="https://www.comedera.com/platos-comida-mexicana-recetas/" target="_blank" class="btn btn-primary">Ir a la receta</a>
+          </div>
+        </div>
+        <div class="card col-sm-12 col-md-6 col-lg-3" style="width: 18rem;">
+          <img src="img/card2.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Tacos al Pastor</h5>
+            <p class="card-text">Si los habitantes de la Ciudad de México tuvieran que llevarse una sola comida a una isla desierta, muy probablemente sería ésta. Están influenciados por la cocina del Imperio Otomano, y mezclan carne marinada de puerco en trompo (sí, parecido al de shawarma) con tortilla de maíz, piña, cebolla, cilantro, y dosis al gusto de limón y salsa picante.</p>
+            <a href="https://www.comedera.com/platos-comida-mexicana-recetas/" target="_blank" class="btn btn-primary">Ir a la receta</a>
+          </div>
+        </div>
+        <div class="card col-sm-12 col-md-6 col-lg-3" style="width: 18rem;">
+          <img src="img/card3.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">quesadillas</h5>
+            <p class="card-text">Suena loco, pero en México no todas las quesadillas tienen queso, o al menos eso depende de la región dónde te encuentres. En la Ciudad de México, las quesadillas pueden ser de pollo, hongos, camarones y un largo etcétera. En síntesis, se trata de tortillas de maíz o trigo que se doblan y rellenan, y se cocinan sobre una plancha o fritas.</p>
+            <a href="https://www.comedera.com/platos-comida-mexicana-recetas/" target="_blank" class="btn btn-primary">Ir a la receta</a>
+          </div>
+        </div>
+        <div class="card col-sm-12 col-md-6 col-lg-3" style="width: 18rem;">
+          <img src="img/card4.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Birra</h5>
+            <p class="card-text">Injustamente menos conocido, se trata de un plato de trozos de borrego cocidos en agua y en su jugo. Los chiles, claro, le dan un gusto totalmente particular, pero tremendo.</p>
+            <a href="https://www.comedera.com/platos-comida-mexicana-recetas/" target="_blank" class="btn btn-primary">Ir a la receta</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4641.8196331834915!2d-58.66596257709746!3d-34.6480821499793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbf4336751cb1%3A0x8b3d2ac2bc2c5958!2sBacacay%20404!5e0!3m2!1ses-419!2sar!4v1665710601282!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       <div class="iconFlex">
@@ -101,5 +138,6 @@
         <a href="https://github.com/JereVea/PD-VeaMurguiaJeremias" target="_blank"><h3 class="aH3">GitHub</h3></a>
       </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
