--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
                   <p>
                     Anhelo los días previos a la Última Desolación. Los días en que los Heraldos nos abandonaron y los Caballeros Radiantes se giraron en nuestra contra. Un tiempo en que aún había magia en el mundo y honor en el corazón de los hombres. El mundo fue nuestro, pero lo perdimos. Probablemente no hay nada más estimulante para las almas de los hombres que la victoria. ¿O tal vez fue la victoria una ilusión durante todo ese tiempo? ¿Comprendieron nuestros enemigos que cuanto más duramente luchaban, más resistíamos nosotros? Quizá vieron que el fuego y el martillo tan solo producían mejores espadas. Pero ignoraron el acero durante el tiempo suficiente para oxidarse. Hay cuatro personas a las que observamos. La primera es el médico, quien dejó de curar para convertirse en soldado durante la guerra más brutal de nuestro tiempo. La segunda es el asesino, un homicida que llora siempre que mata. La tercera es la mentirosa, una joven que viste un manto de erudita sobre un corazón de ladrona. Por último está el alto príncipe, un guerrero que mira al pasado mientras languidece su sed de guerra. El mundo puede cambiar. La potenciación y el uso de las esquirlas pueden aparecer de nuevo, la magia de los días pasados puede volver a ser nuestra. Esas cuatro personas son la clave. Una de ellas nos redimirá. Y una de ellas nos destruirá.
                   </p>
-                  <a class="btn btn-primary btn-xl text-uppercase" href="/market.html" role="button">
+                  <a class="btn btn-primary btn-xl text-uppercase" href="market.html" role="button">
                     <i class="fa-solid fa-shop me-1"></i>
                     Ir a la Tienda
                   </a>
@@ -862,7 +862,7 @@
                   <p>
                     Durante mil años han caído las cenizas y nada florece. Durante mil años los skaa han sido esclavizados y viven sumidos en un miedo inevitable. Durante mil años el Lord Legislador reina con un poder absoluto gracias al terror, a sus poderes e inmortalidad, junto a la poderosa magia de la Alomancia que solo la poseen el y los nobles elegidos. Pero los nobles a menudo han tenido trato sexual con jóvenes skaa y, aunque la ley lo prohíbe, algunos de sus bastardos han sobrevivido y heredado los poderes alománticos. Ahora Kelsier apodado El Superviviente, el único que ha logrado huir de los Pozos de Hathsin, prision-mina donde se manda a los delicuentes a morir, ha encontrado a Vin, una pobre chica skaa con mucha suerte... Tal vez los dos, unidos a la rebelión que los skaa intentan desde hace mil años, logren cambiar el mundo y la atroz dominación del Lord Legislador.
                   </p>
-                  <a class="btn btn-primary btn-xl text-uppercase" href="/market.html" role="button">
+                  <a class="btn btn-primary btn-xl text-uppercase" href="market.html" role="button">
                     <i class="fa-solid fa-shop me-1"></i>
                     Ir a la Tienda
                   </a>
@@ -917,7 +917,7 @@
                     Hace años, el monarca de Idris firmó un tratado con el reino de Hallandren según el cual el rey Dedelin enviaría a su hija mayor, Vivenna, para casarse con Susebron, el rey-dios de Hallabdren. Vivenna ha sido adiestrada durante toda su vida para ser una novia adecuada para Susebron y así cumplir con su deber y ayudar a forjar una paz estable entre los dos reinos. Ese era el plan, pero el monarca de Idris envía a su hija Siri, desobediente e independiente, en lugar de Vivenna.
                     Mientras intenta encontrar su lugar en la corte de Susebron, Siri descubre la verdad oculta sobre el rey-dios. En Idris, Vivenna se siente intranquila y teme que su hermana no esté preparada para esa nueva vida, por lo que decide viajar a Hallandren. Allí se reúne con la gente de Idris que trabaja en la capital, T'Telir, y comienza una nueva vida de espionaje y sabotaje. El plan de Vivenna es rescatar a Siri, aunque tal vez esta ni necesite ni desee ser salvada.
                   </p>
-                  <a class="btn btn-primary btn-xl text-uppercase" href="/market.html" role="button">
+                  <a class="btn btn-primary btn-xl text-uppercase" href="market.html" role="button">
                     <i class="fa-solid fa-shop me-1"></i>
                     Ir a la Tienda
                   </a>
@@ -982,7 +982,7 @@
                   <p>
                     Elantris ha caído en desgracia. Ahora solo acoge a los nuevos «muertos en vida», postrados en una insufrible «no-vida» tras una misteriosa y terrible transformación.Un matrimonio de Estado destinado a unir los reinos de Arelon y Teod se frustra, ya que el novio, Raoden, el príncipe de Arelon, sufre inesperadamente la Transformación, se convierte en un «muerto en vida» y debe refugiarse en Elantris. Su reciente esposa, la princesa Sarene de Teod, creyéndolo muerto, se ve obligada a incorporarse a la vida de Arelon y su nueva capital, Kae. Mientras, el embajador y alto sacerdote de otro reino vecino, Fjordell, usará su habilidad política para intentar dominar Arelod y Teod con el propósito de someterlos a su emperador y su dios.
                   </p>
-                  <a class="btn btn-primary btn-xl text-uppercase" href="/market.html" role="button">
+                  <a class="btn btn-primary btn-xl text-uppercase" href="market.html" role="button">
                     <i class="fa-solid fa-shop me-1"></i>
                     Ir a la Tienda
                   </a>
@@ -1036,7 +1036,7 @@
                   <p>
                     En el planeta Taldain, los legendarios maestros de arena poseen poderes arcanos que les confieren un control espectacular sobre el elemento del que toman su nombre. Pero cuando una siniestra conspiración se salda con su desaparición violenta, el más débil de ellos, Kenton, cree haber sido el único superviviente. Cercado por sus adversarios desde todos los frentes, Kenton forja una improbable alianza con Khriss, una misteriosa «ladoscura» que oculta sus propios secretos.
                   </p>
-                  <a class="btn btn-primary btn-xl text-uppercase" href="/market.html" role="button">
+                  <a class="btn btn-primary btn-xl text-uppercase" href="market.html" role="button">
                     <i class="fa-solid fa-shop me-1"></i>
                     Ir a la Tienda
                   </a>
@@ -1090,7 +1090,7 @@
                   <p>
                     La esperada antología de relatos y novelas cortas del Cosmere,el universo que Brandon Sanderson convertirá en la saga fantástica más extensa e impresionante jamás escrita. Brandon Sandersoncrea mundos, y esos mundos están conectados. Su universo se expandepor las sagas El Archivo de las Tormentas y Nacidos de la Bruma(Mistborn), también por obras como Elantris, construyendo unaconstelación de reinos llamado Cosmere. Ahora este espectacular volumen recopila, por primera vez, nueve relatos y novelas cortasrepresentativos de cada uno de esos mundos, con sus distintos sistemas de magia.
                   </p>
-                  <a class="btn btn-primary btn-xl text-uppercase" href="/market.html" role="button">
+                  <a class="btn btn-primary btn-xl text-uppercase" href="market.html" role="button">
                     <i class="fa-solid fa-shop me-1"></i>
                     Ir a la Tienda
                   </a>
