--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="Venta de libros del Cosmere" />
-    <meta name="keywords" content="Cosmere, Brandon Sanderson, Libros, Fantasia, El Archivo de las Tormentas, Nacidos de la Bruma, El Aliento de los Dioses" />
+    <meta name="keywords" content="Cosmere, Brandon Sanderson, Libros, Fantasia, El Archivo de las Tormentas, Nacidos de la Bruma, El Aliento de los Dioses, Elantris" />
     <meta name="author" content="Jeremías Vea Murguía" />
     <meta
       name="viewport"
